Buscando implementar batch